--- a/react-ui-playground/package.json
+++ b/react-ui-playground/package.json
@@ -10,8 +10,12 @@
     "@types/node": "16.18.108",
     "@types/react": "18.3.6",
     "@types/react-dom": "18.3.0",
+    "bootstrap": "5.3.3",
     "react": "^18.3.1",
+    "react-bootstrap": "2.10.4",
+    "react-burger-menu": "3.0.9",
     "react-dom": "^18.3.1",
+    "react-router-dom": "6.26.2",
     "react-scripts": "5.0.1",
     "typescript": "4.9.5",
     "web-vitals": "2.1.4"
@@ -39,5 +43,8 @@
       "last 1 firefox version",
       "last 1 safari version"
     ]
+  },
+  "devDependencies": {
+    "@types/react-burger-menu": "2.8.7"
   }
 }
