--- a/react-animation-exploration/package.json
+++ b/react-animation-exploration/package.json
@@ -3,6 +3,15 @@
   "version": "0.1.0",
   "private": true,
   "dependencies": {
+    "@babel/core": "^7.26.0",
+    "@babel/plugin-transform-runtime": "^7.26.0",
+    "@babel/preset-env": "^7.26.0",
+    "@babel/preset-react": "^7.26.0",
+    "@babel/preset-typescript": "^7.26.0",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@lottiefiles/dotlottie-react": "0.14.2",
+    "@mui/material": "7.2.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
@@ -11,19 +20,36 @@
     "@types/node": "16.18.126",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@types/react-router-dom": "5.3.3",
+    "babel-loader": "^9.1.0",
+    "copy-webpack-plugin": "^11.0.0",
+    "css-loader": "^6.8.0",
+    "dotenv-webpack": "^8.0.0",
+    "framer-motion": "12.23.2",
+    "html-webpack-plugin": "^5.5.0",
     "lottie-react": "2.4.1",
     "lottie-web": "5.13.0",
     "react": "^19.1.0",
+    "react-confetti": "6.4.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "7.6.3",
     "react-scripts": "5.0.1",
+    "style-loader": "^3.3.0",
     "typescript": "4.9.5",
-    "web-vitals": "2.1.4"
+    "web-vitals": "2.1.4",
+    "webpack": "^5.89.0",
+    "webpack-bundle-analyzer": "^4.9.0",
+    "webpack-cli": "^5.1.0",
+    "webpack-dev-server": "^4.15.0"
   },
   "scripts": {
     "start": "react-scripts start",
+    "start:webpack": "webpack serve --config config/webpack.dev.config.js",
     "build": "react-scripts build",
+    "build:webpack": "webpack --mode production --config config/webpack.prod.config.js",
     "test": "react-scripts test",
-    "eject": "react-scripts eject"
+    "eject": "react-scripts eject",
+    "analyze": "npm run build:webpack && open build/bundle_stats.html"
   },
   "eslintConfig": {
     "extends": [
