--- a/native-support-exploration/package.json
+++ b/native-support-exploration/package.json
@@ -16,6 +16,11 @@
     "@capacitor/haptics": "7.0.1",
     "@capacitor/ios": "7.4.2",
     "@capacitor/toast": "7.0.1",
+    "@emotion/react": "11.14.0",
+    "@emotion/styled": "11.14.1",
+    "@mui/icons-material": "7.2.0",
+    "@mui/material": "7.2.0",
+    "@mui/system": "7.2.0",
     "@testing-library/dom": "10.4.0",
     "@testing-library/jest-dom": "6.6.3",
     "@testing-library/react": "16.3.0",
@@ -24,6 +29,7 @@
     "@types/node": "16.18.126",
     "@types/react": "19.1.8",
     "@types/react-dom": "19.1.6",
+    "@types/react-router-dom": "5.3.3",
     "babel-loader": "^9.1.0",
     "copy-webpack-plugin": "^11.0.0",
     "css-loader": "^6.8.0",
@@ -31,6 +37,7 @@
     "html-webpack-plugin": "^5.5.0",
     "react": "^19.1.0",
     "react-dom": "^19.1.0",
+    "react-router-dom": "7.7.1",
     "react-scripts": "5.0.1",
     "style-loader": "^3.3.0",
     "typescript": "4.9.5",
