--- a/native-support-exploration/package.json
+++ b/native-support-exploration/package.json
@@ -1,5 +1,5 @@
 {
-  "name": "native-support-exploration",
+  "name": "bookstore-app",
   "version": "0.1.0",
   "private": true,
   "dependencies": {
